# irPositioning

./: .gitignore  CMakeLists.txt  algebra.h  beacon.cpp  beacon.h  computePosition.cpp  computePosition.h  defines.h  findBeacons.cpp  findBeacons.h  findWaypoints.cpp  findWaypoints.h  groupBeacons.cpp  groupBeacons.h  main.cpp  output.cpp  output.h  parsewaypoints.cpp  parsewaypoints.h  projecte.kdev4  utils.cpp  utils.h
IPC/: IPC.cpp  IPC.h
picam/: camera.cpp  picam.cpp  picamdemo
webInterface/: data.json  index.html  waypoints.xml
webInterface/js/: .main.js.swp  STLLoader.js  main.js
