cmake_minimum_required(VERSION 2.8)
project( projecte )
find_package(PNG REQUIRED)
include_directories(${projecte_INCLUDE_DIRS})
include_directories(/home/pi/ardupilot/libraries)
include_directories(/opt/vc/include)
include_directories(/opt/vc/userland-master/interface/vcos)
include_directories(/opt/vc/userland-master)
include_directories(/opt/vc/userland-master/interface/vcos/pthreads)
include_directories(/opt/vc/userland-master/interface/vmcs_host/linux)
include_directories(/opt/vc/userland-master/host_applications/linux/libs/bcm_host/include)
include_directories(${PNG_INCLUDE_DIR})
link_directories(/opt/vc/lib)
add_executable( projecte main.cpp utils.cpp beacon.cpp parsewaypoints.cpp output.cpp findBeacons.cpp groupBeacons.cpp findWaypoints.cpp computePosition.cpp picam/camera.cpp picam/cameracontrol.cpp IPC/IPC.cpp )
target_link_libraries( projecte libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so GLESv2 EGL ${libwebsockets_LIBS} websockets pthread rt ${PNG_LIBRARY} )
set(CMAKE_CXX_FLAGS "-O2 -fpermissive -std=c++0x")
